@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,10 +19,9 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
 import java.util.Date;
 import java.util.List;
 import java.util.concurrent.ScheduledFuture;
@@ -57,6 +56,7 @@ import com.rometools.rome.io.SyndFeedInput;
  * sent to one of the channels and for the regular updates of the feed data.
  *
  * @author Svilen Valkanov - Initial contribution
+ * @author Juergen Pabel - Added enclosure channel
  */
 @NonNullByDefault
 public class FeedHandler extends BaseThingHandler {
@@ -92,7 +92,7 @@ public class FeedHandler extends BaseThingHandler {
         // It is not necessary to check if the URL is valid, this will be done in fetchFeedData() method
         String urlString = (String) configuration.get(URL);
         try {
-            url = new URL(urlString);
+            url = URI.create(urlString).toURL();
         } catch (MalformedURLException e) {
             logger.warn("Url '{}' is not valid: ", urlString, e);
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.OFFLINE.CONFIGURATION_ERROR, e.getMessage());
@@ -169,6 +169,13 @@ public class FeedHandler extends BaseThingHandler {
                     state = new StringType(getValueSafely(latestEntry.getLink()));
                 }
                 break;
+            case CHANNEL_LATEST_ENCLOSURE:
+                if (latestEntry == null || latestEntry.getEnclosures().isEmpty()) {
+                    state = UnDefType.UNDEF;
+                } else {
+                    state = new StringType(getValueSafely(latestEntry.getEnclosures().get(0).getUrl()));
+                }
+                break;
             case CHANNEL_LATEST_PUBLISHED_DATE:
             case CHANNEL_LAST_UPDATE:
                 if (latestEntry == null || latestEntry.getPublishedDate() == null) {
@@ -176,8 +183,7 @@ public class FeedHandler extends BaseThingHandler {
                     return;
                 } else {
                     Date date = latestEntry.getPublishedDate();
-                    ZonedDateTime zdt = ZonedDateTime.ofInstant(date.toInstant(), ZoneId.systemDefault());
-                    state = new DateTimeType(zdt);
+                    state = new DateTimeType(date.toInstant());
                 }
                 break;
             case CHANNEL_AUTHOR:
