@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,14 +14,10 @@ package org.openhab.binding.tesla.internal.handler;
 
 import static org.openhab.binding.tesla.internal.TeslaBindingConstants.*;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.Base64;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -30,20 +26,19 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantLock;
 
 import javax.ws.rs.client.Client;
-import javax.ws.rs.client.ClientRequestContext;
-import javax.ws.rs.client.ClientRequestFilter;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.Response;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.tesla.internal.TeslaBindingConstants;
 import org.openhab.binding.tesla.internal.discovery.TeslaVehicleDiscoveryService;
-import org.openhab.binding.tesla.internal.protocol.Vehicle;
-import org.openhab.binding.tesla.internal.protocol.VehicleConfig;
-import org.openhab.binding.tesla.internal.protocol.sso.TokenResponse;
-import org.openhab.core.config.core.Configuration;
+import org.openhab.binding.tesla.internal.protocol.dto.Vehicle;
+import org.openhab.binding.tesla.internal.protocol.dto.VehicleConfig;
+import org.openhab.binding.tesla.internal.protocol.dto.VehicleData;
+import org.openhab.binding.tesla.internal.protocol.dto.sso.TokenResponse;
 import org.openhab.core.io.net.http.HttpClientFactory;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.ChannelUID;
@@ -51,6 +46,7 @@ import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingStatus;
 import org.openhab.core.thing.ThingStatusDetail;
 import org.openhab.core.thing.ThingStatusInfo;
+import org.openhab.core.thing.ThingTypeMigrationService;
 import org.openhab.core.thing.binding.BaseBridgeHandler;
 import org.openhab.core.thing.binding.ThingHandlerService;
 import org.openhab.core.types.Command;
@@ -69,12 +65,13 @@ import com.google.gson.JsonParser;
  * @author Nicolai Grødum - Adding token based auth
  * @author Kai Kreuzer - refactored to use separate vehicle handlers
  */
+@NonNullByDefault
 public class TeslaAccountHandler extends BaseBridgeHandler {
 
-    public static final int API_MAXIMUM_ERRORS_IN_INTERVAL = 2;
+    public static final int API_MAXIMUM_ERRORS_IN_INTERVAL = 3;
     public static final int API_ERROR_INTERVAL_SECONDS = 15;
     private static final int CONNECT_RETRY_INTERVAL = 15000;
-    private static final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")
+    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")
             .withZone(ZoneId.systemDefault());
 
     private final Logger logger = LoggerFactory.getLogger(TeslaAccountHandler.class);
@@ -82,14 +79,17 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
     // REST Client API variables
     private final WebTarget teslaTarget;
     WebTarget vehiclesTarget; // this cannot be marked final as it is used in the runnable
+    WebTarget productsTarget; // this cannot be marked final as it is used in the runnable
     final WebTarget vehicleTarget;
     final WebTarget dataRequestTarget;
     final WebTarget commandTarget;
     final WebTarget wakeUpTarget;
 
     private final TeslaSSOHandler ssoHandler;
+    private final ThingTypeMigrationService thingTypeMigrationService;
 
     // Threading and Job related variables
+    @Nullable
     protected ScheduledFuture<?> connectJob;
 
     protected long lastTimeStamp;
@@ -97,61 +97,53 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
     protected int apiIntervalErrors;
     protected long eventIntervalTimestamp;
     protected int eventIntervalErrors;
-    protected ReentrantLock lock;
+
+    protected ReentrantLock lock = new ReentrantLock();
 
     private final Gson gson = new Gson();
 
+    @Nullable
     private TokenResponse logonToken;
     private final Set<VehicleListener> vehicleListeners = new HashSet<>();
 
-    public TeslaAccountHandler(Bridge bridge, Client teslaClient, HttpClientFactory httpClientFactory) {
+    public TeslaAccountHandler(Bridge bridge, Client teslaClient, HttpClientFactory httpClientFactory,
+            ThingTypeMigrationService thingTypeMigrationService) {
         super(bridge);
         this.teslaTarget = teslaClient.target(URI_OWNERS);
         this.ssoHandler = new TeslaSSOHandler(httpClientFactory.getCommonHttpClient());
+        this.thingTypeMigrationService = thingTypeMigrationService;
 
         this.vehiclesTarget = teslaTarget.path(API_VERSION).path(VEHICLES);
+        this.productsTarget = teslaTarget.path(API_VERSION).path(PRODUCTS);
         this.vehicleTarget = vehiclesTarget.path(PATH_VEHICLE_ID);
-        this.dataRequestTarget = vehicleTarget.path(PATH_DATA_REQUEST);
+        this.dataRequestTarget = vehicleTarget.path(PATH_DATA_REQUEST).queryParam("endpoints",
+                "location_data;charge_state;climate_state;vehicle_state;gui_settings;vehicle_config");
         this.commandTarget = vehicleTarget.path(PATH_COMMAND);
         this.wakeUpTarget = vehicleTarget.path(PATH_WAKE_UP);
     }
 
     @Override
     public void initialize() {
-        logger.trace("Initializing the Tesla account handler for {}", this.getStorageKey());
+        logger.debug("Initializing the Tesla account handler for {}", this.getStorageKey());
 
         updateStatus(ThingStatus.UNKNOWN);
 
-        lock = new ReentrantLock();
-        lock.lock();
-
-        try {
-            if (connectJob == null || connectJob.isCancelled()) {
-                connectJob = scheduler.scheduleWithFixedDelay(connectRunnable, 0, CONNECT_RETRY_INTERVAL,
-                        TimeUnit.MILLISECONDS);
-            }
-        } finally {
-            lock.unlock();
-        }
+        connectJob = scheduler.scheduleWithFixedDelay(connectRunnable, 0, CONNECT_RETRY_INTERVAL,
+                TimeUnit.MILLISECONDS);
     }
 
     @Override
     public void dispose() {
-        logger.trace("Disposing the Tesla account handler for {}", getThing().getUID());
-
-        lock.lock();
-        try {
-            if (connectJob != null && !connectJob.isCancelled()) {
-                connectJob.cancel(true);
-                connectJob = null;
-            }
-        } finally {
-            lock.unlock();
+        logger.debug("Disposing the Tesla account handler for {}", getThing().getUID());
+        ScheduledFuture<?> connectJob = this.connectJob;
+        if (connectJob != null && !connectJob.isCancelled()) {
+            connectJob.cancel(true);
+            this.connectJob = null;
         }
     }
 
     public void scanForVehicles() {
-        scheduler.execute(() -> queryVehicles());
+        scheduler.execute(this::queryVehicles);
     }
 
     public void addVehicleListener(VehicleListener listener) {
@@ -167,17 +159,32 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
         // we do not have any channels -> nothing to do here
     }
 
-    public String getAuthHeader() {
-        if (logonToken != null) {
-            return "Bearer " + logonToken.access_token;
+    public @Nullable String getAuthHeader() {
+        String accessToken = getAccessToken();
+        if (accessToken != null) {
+            return "Bearer " + accessToken;
         } else {
             return null;
         }
     }
 
-    protected boolean checkResponse(Response response, boolean immediatelyFail) {
+    public @Nullable String getAccessToken() {
+        TokenResponse logonToken = this.logonToken;
+        if (logonToken != null) {
+            return logonToken.accessToken;
+        } else {
+            return null;
+        }
+    }
+
+    protected boolean checkResponse(@Nullable Response response, boolean immediatelyFail) {
         if (response != null && response.getStatus() == 200) {
             return true;
+        } else if (response != null && response.getStatus() == 401) {
+            logger.debug("The access token has expired, trying to get a new one.");
+            ThingStatusInfo authenticationResult = authenticate();
+            updateStatus(authenticationResult.getStatus(), authenticationResult.getStatusDetail(),
+                    authenticationResult.getDescription());
         } else {
             apiIntervalErrors++;
             if (immediatelyFail || apiIntervalErrors >= API_MAXIMUM_ERRORS_IN_INTERVAL) {
@@ -186,8 +193,8 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
                 } else {
                     logger.warn("Reached the maximum number of errors ({}) for the current interval ({} seconds)",
                             API_MAXIMUM_ERRORS_IN_INTERVAL, API_ERROR_INTERVAL_SECONDS);
+                    apiIntervalErrors = 0;
                 }
-
                 updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR);
             } else if ((System.currentTimeMillis() - apiIntervalTimestamp) > 1000 * API_ERROR_INTERVAL_SECONDS) {
                 logger.trace("Resetting the error counter. ({} errors in the last interval)", apiIntervalErrors);
@@ -204,25 +211,32 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
 
         if (authHeader != null) {
             // get a list of vehicles
-            Response response = vehiclesTarget.request(MediaType.APPLICATION_JSON_TYPE)
+            Response response = productsTarget.request(MediaType.APPLICATION_JSON_TYPE)
                     .header("Authorization", authHeader).get();
 
-            logger.debug("Querying the vehicle: Response: {}:{}", response.getStatus(), response.getStatusInfo());
+            logger.debug("Querying the vehicle: Response: {}: {}", response.getStatus(),
+                    response.getStatusInfo().getReasonPhrase());
 
             if (!checkResponse(response, true)) {
-                logger.error("An error occurred while querying the vehicle");
-                return null;
+                logger.debug("An error occurred while querying the vehicle");
+                return new Vehicle[0];
             }
 
             JsonObject jsonObject = JsonParser.parseString(response.readEntity(String.class)).getAsJsonObject();
             Vehicle[] vehicleArray = gson.fromJson(jsonObject.getAsJsonArray("response"), Vehicle[].class);
-
+            if (vehicleArray == null) {
+                logger.debug("Response resulted in unexpected null array");
+                return new Vehicle[0];
+            }
             for (Vehicle vehicle : vehicleArray) {
-                String responseString = invokeAndParse(vehicle.id, VEHICLE_CONFIG, null, dataRequestTarget);
-                if (responseString == null || responseString.isBlank()) {
-                    continue;
+                String responseString = invokeAndParse(vehicle.id, null, null, dataRequestTarget, 0);
+                VehicleConfig vehicleConfig = null;
+                if (responseString != null && !responseString.isBlank()) {
+                    VehicleData vehicleData = gson.fromJson(responseString, VehicleData.class);
+                    if (vehicleData != null) {
+                        vehicleConfig = vehicleData.vehicleConfig;
+                    }
                 }
-                VehicleConfig vehicleConfig = gson.fromJson(responseString, VehicleConfig.class);
                 for (VehicleListener listener : vehicleListeners) {
                     listener.vehicleFound(vehicle, vehicleConfig);
                 }
@@ -230,10 +244,18 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
                     if (vehicle.vin.equals(vehicleThing.getConfiguration().get(VIN))) {
                         TeslaVehicleHandler vehicleHandler = (TeslaVehicleHandler) vehicleThing.getHandler();
                         if (vehicleHandler != null) {
+                            if (TeslaBindingConstants.THING_TYPE_VEHICLE.equals(vehicleThing.getThingTypeUID())
+                                    && vehicleConfig != null) {
+                                // Seems the type of this vehicle has not been identified before, so let's switch the
+                                // thing type of it
+                                thingTypeMigrationService.migrateThingType(vehicleThing, vehicleConfig.identifyModel(),
+                                        vehicleThing.getConfiguration());
+                                break;
+                            }
                             logger.debug("Querying the vehicle: VIN {}", vehicle.vin);
                             String vehicleJSON = gson.toJson(vehicle);
                             vehicleHandler.parseAndUpdate("queryVehicle", null, vehicleJSON);
-                            logger.trace("Vehicle is id {}/vehicle_id {}/tokens {}", vehicle.id, vehicle.vehicle_id,
+                            logger.trace("Vehicle is id {}/vehicle_id {}/tokens {}", vehicle.id, vehicle.vehicleId,
                                     vehicle.tokens);
                         }
                     }
@@ -249,52 +271,33 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
         return this.getThing().getUID().getId();
     }
 
-    private ThingStatusInfo authenticate() {
+    ThingStatusInfo authenticate() {
         TokenResponse token = logonToken;
 
         boolean hasExpired = true;
+        logger.debug("Current authentication time {}", DATE_FORMATTER.format(Instant.now()));
 
         if (token != null) {
-            Instant tokenCreationInstant = Instant.ofEpochMilli(token.created_at * 1000);
-            logger.debug("Found a request token created at {}", dateFormatter.format(tokenCreationInstant));
-            Instant tokenExpiresInstant = Instant.ofEpochMilli(token.created_at * 1000 + 60 * token.expires_in);
+            Instant tokenCreationInstant = Instant.ofEpochMilli(token.createdAt * 1000);
+            Instant tokenExpiresInstant = Instant.ofEpochMilli((token.createdAt + token.expiresIn) * 1000);
+            logger.debug("Found a request token from {}", DATE_FORMATTER.format(tokenCreationInstant));
+            logger.debug("Access token expiration time {}", DATE_FORMATTER.format(tokenExpiresInstant));
 
             if (tokenExpiresInstant.isBefore(Instant.now())) {
-                logger.debug("The token has expired at {}", dateFormatter.format(tokenExpiresInstant));
+                logger.debug("The access token has expired");
                 hasExpired = true;
             } else {
+                logger.debug("The access token has not expired yet");
                 hasExpired = false;
             }
         }
 
         if (hasExpired) {
-            String username = (String) getConfig().get(CONFIG_USERNAME);
-            String password = (String) getConfig().get(CONFIG_PASSWORD);
             String refreshToken = (String) getConfig().get(CONFIG_REFRESHTOKEN);
 
             if (refreshToken == null || refreshToken.isEmpty()) {
-                if (username != null && !username.isEmpty() && password != null && !password.isEmpty()) {
-                    try {
-                        refreshToken = ssoHandler.authenticate(username, password);
-                    } catch (Exception e) {
-                        logger.error("An exception occurred while obtaining refresh token with username/password: '{}'",
-                                e.getMessage());
-                    }
-
-                    if (refreshToken != null) {
-                        // store refresh token from SSO endpoint in config, clear the password
-                        Configuration cfg = editConfiguration();
-                        cfg.put(TeslaBindingConstants.CONFIG_REFRESHTOKEN, refreshToken);
-                        cfg.remove(TeslaBindingConstants.CONFIG_PASSWORD);
-                        updateConfiguration(cfg);
-                    } else {
-                        return new ThingStatusInfo(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
-                                "Failed to obtain refresh token with username/password.");
-                    }
-                } else {
-                    return new ThingStatusInfo(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
-                            "Neither a refresh token nor credentials are provided.");
-                }
+                return new ThingStatusInfo(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
+                        "No refresh token is provided.");
             }
 
             this.logonToken = ssoHandler.getAccessToken(refreshToken);
@@ -307,7 +310,8 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
         return new ThingStatusInfo(ThingStatus.ONLINE, ThingStatusDetail.NONE, null);
     }
 
-    protected String invokeAndParse(String vehicleId, String command, String payLoad, WebTarget target) {
+    protected @Nullable String invokeAndParse(@Nullable String vehicleId, @Nullable String command,
+            @Nullable String payLoad, WebTarget target, int noOfretries) {
         logger.debug("Invoking: {}", command);
 
         if (vehicleId != null) {
@@ -316,34 +320,44 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
             if (payLoad != null) {
                 if (command != null) {
                     response = target.resolveTemplate("cmd", command).resolveTemplate("vid", vehicleId).request()
-                            .header("Authorization", "Bearer " + logonToken.access_token)
+                            .header("Authorization", getAuthHeader())
                             .post(Entity.entity(payLoad, MediaType.APPLICATION_JSON_TYPE));
                 } else {
                     response = target.resolveTemplate("vid", vehicleId).request()
-                            .header("Authorization", "Bearer " + logonToken.access_token)
+                            .header("Authorization", getAuthHeader())
                             .post(Entity.entity(payLoad, MediaType.APPLICATION_JSON_TYPE));
                 }
+            } else if (command != null) {
+                response = target.resolveTemplate("cmd", command).resolveTemplate("vid", vehicleId)
+                        .request(MediaType.APPLICATION_JSON_TYPE).header("Authorization", getAuthHeader()).get();
             } else {
-                if (command != null) {
-                    response = target.resolveTemplate("cmd", command).resolveTemplate("vid", vehicleId)
-                            .request(MediaType.APPLICATION_JSON_TYPE)
-                            .header("Authorization", "Bearer " + logonToken.access_token).get();
-                } else {
-                    response = target.resolveTemplate("vid", vehicleId).request(MediaType.APPLICATION_JSON_TYPE)
-                            .header("Authorization", "Bearer " + logonToken.access_token).get();
-                }
+                response = target.resolveTemplate("vid", vehicleId).request(MediaType.APPLICATION_JSON_TYPE)
+                        .header("Authorization", getAuthHeader()).get();
             }
 
             if (!checkResponse(response, false)) {
-                logger.debug("An error occurred while communicating with the vehicle during request {}: {}:{}", command,
-                        (response != null) ? response.getStatus() : "",
-                        (response != null) ? response.getStatusInfo() : "No Response");
+                if (response == null) {
+                    logger.debug(
+                            "An error occurred while communicating with the vehicle during request, the response was null");
+                    return null;
+                }
+                logger.debug("An error occurred while communicating with the vehicle during request {}: {}: {}",
+                        command, response.getStatus(), response.getStatusInfo().getReasonPhrase());
+                if (response.getStatus() == 408 && noOfretries > 0) {
+                    try {
+                        // we give the vehicle a moment to wake up and try the request again
+                        Thread.sleep(TimeUnit.SECONDS.toMillis(API_ERROR_INTERVAL_SECONDS));
+                        logger.debug("Retrying to send the command {}.", command);
+                        return invokeAndParse(vehicleId, command, payLoad, target, noOfretries - 1);
+                    } catch (InterruptedException e) {
+                    }
+                }
                 return null;
             }
 
             try {
                 JsonObject jsonObject = JsonParser.parseString(response.readEntity(String.class)).getAsJsonObject();
-                logger.trace("Request : {}:{}:{} yields {}", command, payLoad, target, jsonObject.get("response"));
+                logger.trace("Request : {}:{} yields {}", command, payLoad, jsonObject.get("response"));
                 return jsonObject.get("response").toString();
             } catch (Exception e) {
                 logger.error("An exception occurred while invoking a REST request: '{}'", e.getMessage());
@@ -358,8 +372,9 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
             lock.lock();
 
             ThingStatusInfo status = getThing().getStatusInfo();
-            if (status.getStatus() != ThingStatus.ONLINE
-                    && status.getStatusDetail() != ThingStatusDetail.CONFIGURATION_ERROR) {
+            if ((status.getStatus() != ThingStatus.ONLINE
+                    && status.getStatusDetail() != ThingStatusDetail.CONFIGURATION_ERROR)
+                    || hasUnidentifiedVehicles()) {
                 logger.debug("Setting up an authenticated connection to the Tesla back-end");
 
                 ThingStatusInfo authenticationResult = authenticate();
@@ -368,8 +383,8 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
 
                 if (authenticationResult.getStatus() == ThingStatus.ONLINE) {
                     // get a list of vehicles
-                    Response response = vehiclesTarget.request(MediaType.APPLICATION_JSON_TYPE)
-                            .header("Authorization", "Bearer " + logonToken.access_token).get();
+                    Response response = productsTarget.request(MediaType.APPLICATION_JSON_TYPE)
+                            .header("Authorization", getAuthHeader()).get();
 
                     if (response != null && response.getStatus() == 200 && response.hasEntity()) {
                         updateStatus(ThingStatus.ONLINE);
@@ -399,19 +414,16 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
                                 }
                             }
                         }
-                    } else {
-                        if (response != null) {
-                            logger.error("Error fetching the list of vehicles : {}:{}", response.getStatus(),
-                                    response.getStatusInfo());
-                            updateStatus(ThingStatus.OFFLINE);
-                        }
+                    } else if (response != null) {
+                        logger.error("Error fetching the list of vehicles : {}:{}", response.getStatus(),
+                                response.getStatusInfo());
+                        updateStatus(ThingStatus.OFFLINE);
                     }
                 } else if (authenticationResult.getStatusDetail() == ThingStatusDetail.CONFIGURATION_ERROR) {
                     // make sure to set thing to CONFIGURATION_ERROR in case of failed authentication in order not to
                     // hit request limit on retries on the Tesla SSO endpoints.
                     updateStatus(ThingStatus.OFFLINE, authenticationResult.getStatusDetail());
                 }
-
             }
         } catch (Exception e) {
             logger.error("An exception occurred while connecting to the Tesla back-end: '{}'", e.getMessage(), e);
@@ -420,40 +432,29 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
         }
     };
 
-    public static class Authenticator implements ClientRequestFilter {
-        private final String user;
-        private final String password;
-
-        public Authenticator(String user, String password) {
-            this.user = user;
-            this.password = password;
-        }
-
-        @Override
-        public void filter(ClientRequestContext requestContext) throws IOException {
-            MultivaluedMap<String, Object> headers = requestContext.getHeaders();
-            final String basicAuthentication = getBasicAuthentication();
-            headers.add("Authorization", basicAuthentication);
-        }
-
-        private String getBasicAuthentication() {
-            String token = this.user + ":" + this.password;
-            return "Basic " + Base64.getEncoder().encodeToString(token.getBytes(StandardCharsets.UTF_8));
-        }
+    private boolean hasUnidentifiedVehicles() {
+        return getThing().getThings().stream()
+                .anyMatch(vehicle -> TeslaBindingConstants.THING_TYPE_VEHICLE.equals(vehicle.getThingTypeUID()));
     }
 
     protected class Request implements Runnable {
 
+        private static final int NO_OF_RETRIES = 3;
+
         private TeslaVehicleHandler handler;
         private String request;
+        @Nullable
         private String payLoad;
         private WebTarget target;
+        private boolean allowWakeUpForCommands;
 
-        public Request(TeslaVehicleHandler handler, String request, String payLoad, WebTarget target) {
+        public Request(TeslaVehicleHandler handler, String request, @Nullable String payLoad, WebTarget target,
+                boolean allowWakeUpForCommands) {
             this.handler = handler;
             this.request = request;
             this.payLoad = payLoad;
             this.target = target;
+            this.allowWakeUpForCommands = allowWakeUpForCommands;
         }
 
         @Override
@@ -462,7 +463,8 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
                 String result = "";
 
                 if (getThing().getStatus() == ThingStatus.ONLINE) {
-                    result = invokeAndParse(handler.getVehicleId(), request, payLoad, target);
+                    result = invokeAndParse(handler.getVehicleId(), request, payLoad, target,
+                            allowWakeUpForCommands ? NO_OF_RETRIES : 0);
                     if (result != null && !"".equals(result)) {
                         handler.parseAndUpdate(request, payLoad, result);
                     }
@@ -473,13 +475,13 @@ public class TeslaAccountHandler extends BaseBridgeHandler {
         }
     }
 
-    public Request newRequest(TeslaVehicleHandler teslaVehicleHandler, String command, String payLoad,
-            WebTarget target) {
-        return new Request(teslaVehicleHandler, command, payLoad, target);
+    public Request newRequest(TeslaVehicleHandler teslaVehicleHandler, String command, @Nullable String payLoad,
+            WebTarget target, boolean allowWakeUpForCommands) {
+        return new Request(teslaVehicleHandler, command, payLoad, target, allowWakeUpForCommands);
     }
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(TeslaVehicleDiscoveryService.class);
+        return List.of(TeslaVehicleDiscoveryService.class);
     }
 }
